<resources>
    <string name="app_name">AWSAmplifyAuthentication</string>
    <string name="here_to_get">Here To Get</string>
    <string name="welcome">Welcome !</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="start_here">Start here</string>
    <string name="register">Register</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="signin">Sign in</string>
    <string name="one_step_more">One step more</string>
    <string name="confirmation_code">Code</string>
    <string name="confirm">Confirm</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="identity_id_not_found">Identify not found!</string>
    <string name="let_me_help">Let me help!</string>
    <string name="send_password_code">Send</string>
    <string name="happy_again">Are you happy again?</string>
</resources>